# Acquisition_Platform

./: .gitignore  Makefile  README.md
Acquisition_Platform/: CMakeLists.txt  Makefile  README.md  Vars.cmake  package.xml
Acquisition_Platform/firmware_build/: Makefile
Acquisition_Platform/makefiles/: Makefile_common.mk  Makefile_firmware.mk  Makefile_host.mk
Acquisition_Platform/src/common/: packets.h
Acquisition_Platform/src/firmware/: acquisition_platform.c  acquisition_platform.h  firmware_constants.h  main.c
Acquisition_Platform/src/firmware/avr_common/: eeprom.h  i2c.c  i2c_communication.h
Acquisition_Platform/src/firmware/encoder/: encoder.h  encoder_odometry.c  encoder_odometry.h
Acquisition_Platform/src/firmware/imu/: imu.c  imu.h  imu_odometry.c  imu_odometry.h
Acquisition_Platform/src/firmware/packets/: packet_handler.c  packet_handler.h  uart_packets.c
Acquisition_Platform/src/host/: echo_client.c  host.c  host.h  main.c
Acquisition_Platform/src/host/kalman_filter/: README.txt  kalman_filter.c  kalman_filter.h  matrix.c  matrix.h
Acquisition_Platform/src/host/serial/: serial.c  serial.h  serial_communication.c  serial_communication.h
Acquisition_Platform_ros/: CMakeLists.txt  README.md  Vars.cmake  package.xml
Acquisition_Platform_ros/launch/: acq_pl.launch
Acquisition_Platform_ros/src/: host_ros.cpp  host_ros.h  main.cpp
controller/: Makefile  main.c
controller/avr_common/: avr.mk  i2c.c  i2c_communication.c  uart.c
controller/encoder/: encoder.c
controller/imu/: Makefile  imu.c  imu_i2c.h  t  t.c
docs/honours_programme/: 00_abstract.tex  01_introduction.tex  02_kalman_filter.tex  03_kalman_filter_applied_on_our_robot.tex  05_conclusions.tex  06_apnd_kf.tex  07_bibliography.bib  Makefile  main.tex
docs/thesis/: 00_abstract.tex  00_acknowledgments.tex  01_introduction.tex  (+11 more)
firmware_build/: Makefile
host/: Makefile  host.c  serial.c  serial.h  test.c
host_build/: Makefile
makefiles/: Makefile.firmware  Makefile.host  Makefile_host.mk
(+41 files in other folders)
